# PATH-EASY

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: main.yml
CommandAliasManager/: .gitignore  CMakeLists.txt  CmakeLists.txt  CommandAliasManager.rc  CommandAliasManager.sln  CommandAliasManager.vcxproj  README.md  main.cpp  pch.h
CommandAliasManager/CommandA.24544200/x64/Debug/: vc143.idb
CommandAliasManager/CommandA.24544200/x64/Debug/CommandA.24544200.tlog/: CL.command.1.tlog  CommandAliasManager.lastbuildstate
CommandAliasManager/include/: AliasManager.h  CommandAliasDlg.h  ConditionalArgumentDialog.h  FileBrowserDlg.h  LabelingDialog.h  MainDlg.h  ManageCommandsDialog.h  NestedVariantDialog.h  PathManager.h  PreferencesDlg.h  Resource.h  VariantDialog.h
CommandAliasManager/resources/: PowerShellCommands.csv  dark-theme.css
CommandAliasManager/src/: AliasManager.cpp  CommandAliasDlg.cpp  ConditionalArgumentDialog.cpp  FileBrowserDlg.cpp  LabelingDialog.cpp  Main.cpp  MainApp.cpp  MainDlg.cpp  ManageCommandsDialog.cpp  NestedVariantDialog.cpp  PathManager.cpp  PreferencesDlg.cpp  TemplateManagerDialog.cpp  VariantDialog.cpp
